# BreastMRISegmentator

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  release_plan.md
.github/workflows/: test.yml
breast_mri_segmentator/: __init__.py  api.py  cli.py  io.py  weights.py
docs/: citation.bib  owner_release_todo.md  results.md  training.md  usage.md  zenodo_upload.md
examples/: run_on_public_demo_case.ipynb
scripts/: run_inference.sh
slicer_extension/: CMakeLists.txt  README.md  SlicerBreastMRISegmentator.s4ext
slicer_extension/BreastMRISegmentator/: BreastMRISegmentator.py  CMakeLists.txt
slicer_extension/BreastMRISegmentator/BreastMRISegmentatorLib/: IconPath.py  PythonDependencyChecker.py  SegmentationWidget.py  Signal.py  Utils.py  __init__.py
slicer_extension/BreastMRISegmentator/Resources/Icons/: README.md
slicer_extension/BreastMRISegmentator/Testing/: IntegrationTestCase.py  Utils.py  __init__.py  conftest.py
tests/: __init__.py  test_cli.py  test_io.py  test_weights.py
